Added individual Users and Articles, Added comments to Articles through own component and also ensured all css is linked to its own component

--- a/src/Components/styles/User.css
+++ b/src/Components/styles/User.css
@@ -2,9 +2,8 @@
   height: 210px;
   width: 190px;
 }
-.user-tabs {
+.user-pane {
   display: flex;
   flex-direction: column;
-  text-align: center;
   align-items: center;
 }
