--- a/src/App.css
+++ b/src/App.css
@@ -30,7 +30,7 @@ header {
   display: grid;
   grid-template-columns: 1fr;
 }
-.articles {
+.pages {
   display: flex;
   justify-content: center;
 }
