--- a/src/Components/Article/Article.css
+++ b/src/Components/Article/Article.css
@@ -1,18 +1,37 @@
-.single-article {
-  border: solid black 1px;
-  width: 320px;
-  text-align: center;
-  margin: 10px;
-  background-color: aliceblue;
-}
+@import url("https://fonts.googleapis.com/css?family=Open+Sans");
 
-.article-page {
-  min-width: 320px;
+.single-article {
+  width: auto;
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  margin: 20px;
+  padding: 20px;
+  background-color: aliceblue;
+  border-radius: 5%;
 }
 
 .comment-pane {
-  width: 320px;
+  width: auto;
   height: auto;
   display: flex;
+  justify-content: center;
   margin: 10px;
+}
+
+.article-page {
+  text-align: center;
+  align-items: center;
+  max-width: 700px;
+  height: auto;
+  margin: 10px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.article-title {
+  text-decoration: none;
+  color: black;
+  font-family: "Open Sans", sans-serif;
 }
