--- a/src/Components/Articles/Articles.css
+++ b/src/Components/Articles/Articles.css
@@ -1,23 +1,63 @@
+@import url("https://fonts.googleapis.com/css?family=Open+Sans");
+
 .article-tabs {
-  border: solid black 1px;
-  width: 320px;
+  width: auto;
   display: flex;
   justify-content: center;
   text-align: center;
   margin: 10px;
+  padding: 20px;
   background-color: aliceblue;
+  border-radius: 5%;
 }
 
 .article-window {
   text-align: center;
-  min-width: 320px;
-  height: auto;
+  max-width: 700px;
   margin: 10px;
   display: flex;
   flex-direction: column;
+  overflow-y: auto;
 }
 
 .sort-buttons {
   display: flex;
   justify-content: center;
+}
+
+.article-window {
+  overflow-y: auto;
+}
+
+.article-title {
+  text-decoration: none;
+  color: black;
+  font-family: "Open Sans", sans-serif;
+}
+
+.article-title:hover {
+  color: blue;
+}
+
+.sort-button {
+  width: 142px;
+  height: 40px;
+  text-align: center;
+  text-decoration: none;
+  line-height: 30px;
+  display: block;
+  margin: 10px 0px -20px 0px;
+  border: black;
+  background-color: bisque;
+  font-size: 14px;
+  border-radius: 9px;
+}
+
+.sort-button:hover {
+  background-color: gold;
+}
+.sort-buttons-comments {
+  display: flex;
+  justify-content: center;
+  padding: 5px;
 }
