--- a/src/Components/Comments/Comments.css
+++ b/src/Components/Comments/Comments.css
@@ -1,4 +1,9 @@
 .individual-comment-window {
+  width: auto;
+  text-align: center;
+  margin: 15px;
+  padding: 20px;
+  border-radius: 5%;
   background-color: beige;
 }
 
@@ -10,4 +15,38 @@
 .post-comment-box {
   width: 310px;
   height: 100px;
+}
+.vote-up-button {
+  background-color: #4caf50;
+  border-radius: 8px;
+  width: 70px;
+  color: white;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 10px;
+  margin: 4px 2px;
+  cursor: pointer;
+}
+.vote-down-button {
+  background-color: red;
+  border-radius: 8px;
+  width: 70px;
+  color: white;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 10px;
+  margin: 4px 2px;
+  cursor: pointer;
+}
+
+.comment-link {
+  text-decoration: none;
+  color: black;
+  font-family: "Open Sans", sans-serif;
+}
+.comment-link:hover {
+  text-decoration: none;
+  color: blue;
 }
