--- a/src/Components/User/User.css
+++ b/src/Components/User/User.css
@@ -11,3 +11,40 @@
 .user-comments {
   width: 320px;
 }
+
+.comment-pane {
+  width: auto;
+  height: auto;
+  display: flex;
+  justify-content: center;
+  margin: 10px;
+}
+
+.user-page {
+  text-align: center;
+  align-items: center;
+  max-width: 700px;
+  height: auto;
+  margin: 10px;
+  display: flex;
+  justify-content: center;
+
+  flex-direction: column;
+}
+
+.username-title {
+  font-family: "Russo One", sans-serif;
+}
+.user-tabs {
+  width: auto;
+  display: flex;
+  padding: 20px 80px;
+  margin: 10px;
+  max-width: 900px;
+  flex-direction: column;
+  text-align: center;
+  background-color: wheat;
+  align-items: center;
+  border: black solid 10px;
+  border-radius: 50px;
+}
