--- a/src/Components/Users/Users.css
+++ b/src/Components/Users/Users.css
@@ -1,10 +1,51 @@
+@import url("https://fonts.googleapis.com/css?family=Open+Sans");
+@import url("https://fonts.googleapis.com/css?family=Pacifico|Russo+One");
 .user-profile-pic {
   height: 210px;
   width: 190px;
 }
 .user-tabs {
+  width: auto;
   display: flex;
+  padding: 20px 80px;
+  margin: 10px;
+  max-width: 900px;
   flex-direction: column;
   text-align: center;
+  background-color: wheat;
   align-items: center;
+  border: black solid 10px;
+  border-radius: 50px;
 }
+.user-tabs:hover {
+  background-color: lemonchiffon;
+}
+
+.users-section {
+  text-align: center;
+  max-width: 700px;
+  margin: 10px;
+  display: flex;
+  flex-direction: column;
+  overflow-y: auto;
+}
+
+.users-page {
+  width: auto;
+}
+.user-link {
+  text-decoration: none;
+  color: black;
+  font-weight: bolder;
+}
+
+.user-title {
+  color: black;
+  font-family: "Open Sans", sans-serif;
+}
+
+.user-name-header {
+  color: black;
+  font-family: "Russo One", sans-serif;
+}
+
