--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,7 @@ header {
   display: flex;
   justify-content: center;
   background-color: black;
+  height: 50px;
   font-size: 22px;
 }
 .nav-item-top {
@@ -49,7 +50,6 @@ header {
 .pages {
   display: flex;
   justify-content: center;
-  background-color: white;
   width: auto;
 }
 
