--- a/src/Components/Articles/Articles.css
+++ b/src/Components/Articles/Articles.css
@@ -66,3 +66,39 @@
   justify-content: center;
   padding: 5px;
 }
+
+.single-article {
+  width: auto;
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  margin: 20px;
+  padding: 20px;
+  background-color: aliceblue;
+  border-radius: 5%;
+}
+
+.comment-pane {
+  width: auto;
+  height: auto;
+  display: flex;
+  justify-content: center;
+  margin: 10px;
+}
+
+.article-page {
+  text-align: center;
+  align-items: center;
+  max-width: 700px;
+  height: auto;
+  margin: 10px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.article-title {
+  text-decoration: none;
+  color: black;
+  font-family: "Open Sans", sans-serif;
+}
