--- a/src/Components/Users/Users.css
+++ b/src/Components/Users/Users.css
@@ -22,17 +22,17 @@
 }
 
 .users-section {
+  align-items: center;
   text-align: center;
   max-width: 700px;
+  height: auto;
   margin: 10px;
   display: flex;
+  justify-content: center;
   flex-direction: column;
   overflow-y: auto;
 }
 
-.users-page {
-  width: auto;
-}
 .user-link {
   text-decoration: none;
   color: black;
